# Catalog-AI-App

./: .gitignore  README.md  main.py  pyproject.toml  run_ingest.py
rag_app/apps/ui/: app.py
rag_app/core/: config.py
rag_app/core/ingest/: chunker.py  embeddings.py  extractor.py  pdf_loader.py  pipeline.py
rag_app/core/ocr/: tesseract.py
rag_app/core/rag/: chain.py  dimensions.py  retriever.py
rag_app/core/storage/: mongo.py
rag_app/core/utils/: intent.py  links.py
rag_app/tests/: test_mongo.py  test_retrieval.py
